--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1>Wait kro yaar, abhi sikh raha hu 😎</h1>
+  <h1>Wait kro yaar, abhi sikh rha hu 😎</h1>
   <p>— Vaibhav Singh</p>
 </body>
 </html>
