--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       height: 100vh;
       background: 
         linear-gradient(-45deg, rgba(30, 60, 114, 0.7), rgba(42, 82, 152, 0.7), rgba(30, 60, 114, 0.7), rgba(15, 32, 39, 0.7)),
-        url('you-photos.jpg') no-repeat center center fixed;
+        url('you-photo.jpg') no-repeat center center fixed;
       background-size: cover;
       animation: gradientBG 15s ease infinite;
       display: flex;
