--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
     }
 
     body {
-      height: 100vh;
-      background: 
-        linear-gradient(-45deg, rgba(30, 60, 114, 0.7), rgba(42, 82, 152, 0.7), rgba(30, 60, 114, 0.7), rgba(15, 32, 39, 0.7)),
-        url('your-photo.jpg') no-repeat center center fixed;
-      background-size: cover;
-      animation: gradientBG 15s ease infinite;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      font-family: 'Segoe UI', sans-serif;
-      color: #fff;
-    }
+  height: 100vh;
+  background-image:
+    linear-gradient(-45deg, rgba(30, 60, 114, 0.7), rgba(42, 82, 152, 0.7), rgba(30, 60, 114, 0.7), rgba(15, 32, 39, 0.7)),
+    url('your-photo.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  animation: gradientBG 15s ease infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Segoe UI', sans-serif;
+  color: #fff;
+}
+
 
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
