--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       box-sizing: border-box;
     }
 
-    body {
+body {
   height: 100vh;
   background-image:
     linear-gradient(-45deg, rgba(30, 60, 114, 0.7), rgba(42, 82, 152, 0.7), rgba(30, 60, 114, 0.7), rgba(15, 32, 39, 0.7)),
     url('your-photo.jpg');
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-attachment: fixed;
   animation: gradientBG 15s ease infinite;
   display: flex;
